platform/policy/kyverno/tests/require-pbd/vaild-pdb.yml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: valid-app
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: valid
