platform/policy/kyverno/tests/require-pbd/chainsaw-test.yml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enforce-pdb-policy
spec:
  steps:
    - try:
        - apply:
            file: ../../require-pdb.yml

    - try:
        - apply:
            file: vaild-pdb.yml
            expect:
              - match:
                  apiVersion: policy/v1
                  kind: PodDisruptionBudget
                  metadata:
                    name: valid-app
                check:
                  ($error == null): true
